--- a/style.scss
+++ b/style.scss
@@ -20,7 +20,7 @@ html {
 body {
 	background: url("https://images7.alphacoders.com/656/thumb-1920-656603.jpg");
   font: 18px/1.4 $helvetica;
-  color: $darkGray;
+  color: $white;
 }
 
 .container {
