--- a/style.scss
+++ b/style.scss
@@ -32,7 +32,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
-  color: $white;
+  color: $darkerGray;
   font-weight: bold;
 
   line-height: 1.7;
@@ -61,7 +61,7 @@ h3 {
 
 h4 {
   font-size: 18px;
-  color: $gray;
+  color: $white;
 }
 
 p {
@@ -69,7 +69,7 @@ p {
 }
 
 a {
-  color: $blue;
+  color: $darkerGray;
   text-decoration: none;
 	cursor: pointer;
   &:hover, &:active {
