--- a/style.scss
+++ b/style.scss
@@ -19,6 +19,9 @@ html {
 
 body {
 	background: url("https://images7.alphacoders.com/656/thumb-1920-656603.jpg");
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
   font: 18px/1.4 $helvetica;
   color: $white;
 }
