--- a/style.scss
+++ b/style.scss
@@ -14,6 +14,138 @@
 /**************/
 
 html {
+
+
+
+
+ font-size: 100%;
+
+
+}
+
+
+
+
+
+
+
+table, th, td {
+
+
+	border:1px solid white;	
+
+
+	
+
+
+}
+
+
+
+
+
+
+
+table {
+
+
+	border-collapse: collapse;
+
+
+}
+
+
+
+
+
+
+
+table, th, td {
+
+
+	border:1px solid white;
+
+
+}
+
+
+
+
+
+
+
+table {
+
+
+	width: 100%;
+
+
+}
+
+
+
+
+
+
+
+th {
+
+
+	height: 50px;
+
+
+}
+
+
+
+
+
+
+
+th {
+
+
+	text-align: left;
+
+
+}
+
+
+
+
+
+
+
+td {
+
+
+	height: 50px;
+
+
+	vertical-align: bottom;
+
+
+}
+
+
+
+
+
+
+
+th, td {
+
+
+	padding: 15px;
+
+
+	text-align: left;
+
+
+}
+
+
+html {
   font-size: 100%;
 }
 
