--- a/style.scss
+++ b/style.scss
@@ -29,7 +29,7 @@ ul.img-list li {
 }
 
 span.text-content {
-  background: rgba(0,0,0,0.5);
+  background: rgb(0,0,0,);
   color: white;
   cursor: pointer;
   display: table;
